Apply package and app name template

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,3 +1,5 @@
+package = io.baas
+app_name = Startup
 baas_api_url = https://api.baas.io
 baas_id = YOUR_ORGANIZATION_ID
 baas_backend_app = sandbox
