--- a/src/main/g8/AndroidManifest.xml
+++ b/src/main/g8/AndroidManifest.xml
@@ -15,10 +15,10 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:name=".StartupApplication"
+        android:name=".$app_name;format="Camel"$Application"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".StartupActivity"
+            android:name=".$app_name;format="Camel"$Activity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
