--- a/src/main/g8/pom.xml
+++ b/src/main/g8/pom.xml
@@ -10,7 +10,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>$package$</groupId>
-    <artifactId>$app_name;format="snake"$</artifactId>
+    <artifactId>$app_name;format="norm"$</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>apk</packaging>
     <name>$app_name$</name>
