Extract baas.io sdk version string and bump it to 0.1.1-SNAPSHOT

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,4 +3,5 @@ app_name = Startup
 baas_api_url = https://api.baas.io
 baas_id = YOUR_ORGANIZATION_ID
 baas_backend_app = sandbox
+baas_io_sdk_version = 0.1.1-SNAPSHOT
 verbatim = *.png
